# src/controllers/all/news.controller.ts
@@ -12,7 +12,6 @@ export const getAllNews = async (
   const page = Number(req.query.page) || 1;
   const limit = Number(req.query.limit) || ITEMS_PER_PAGE;
   const tags = req.query.tags || undefined;
-  const EX_LANGUAGE = req.t('excludeLang');
   const filter: any = { status: 'active' };
   if (tags) {
     filter.tags = tags;
@@ -23,11 +22,6 @@ export const getAllNews = async (
     const allNews = await News.find(filter)
       .skip((page - 1) * limit)
       .limit(limit)
-      .select({
-        title: { [EX_LANGUAGE]: 0 },
-        description: { [EX_LANGUAGE]: 0 },
-        shortDescription: { [EX_LANGUAGE]: 0 },
-      });
     return res.status(200).json({
       status: 200,
       message: req.t('Success.retrieve'),
@@ -40,17 +34,12 @@ export const getAllNews = async (
 };
 
 export const getNews = async (req: Request, res: Response, next: NextFunction) => {
-  const EX_LANGUAGE = req.t('excludeLang');
   try {
     const slug = req.params.newsSlug;
     const news = await News.findOne({
       status: 'active',
       slug: slug
-    }).select({
-      title: { [EX_LANGUAGE]: 0 },
-      description: { [EX_LANGUAGE]: 0 },
-      shortDescription: { [EX_LANGUAGE]: 0 },
-    });
+    })
     if(!news) {
       return res.status(404).json({ status: 404, message: req.t('Error.notFound') });
     }
